--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,8 +15,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.69.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,7 +49,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "sass": "^1.69.7"
+    "gh-pages": "^6.1.1"
   }
 }
