--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://mikhailsulim.github.io/test_antipoff",
+  "homepage": "http://188.225.74.66/test_antipoff",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
